# hstecs

./: Makefile  README.md  hstecs.cabal  tecs.cabal
assembler/: Assembler.hs  Main.hs  assembler.cabal
assembler/source/: Main.hs
assembler/source/Tecs/: Assembly.hs  Definitions.hs  Parsing.hs  Types.hs
book/projects/01/: And.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Xor.hdl
book/projects/02/: ALU.hdl  Add16.hdl  FullAdder.hdl
book/projects/03/1/: Bit.hdl  PC.hdl  RAM64.hdl  RAM8.hdl
book/projects/03/2/: RAM16K.hdl  RAM4K.hdl  RAM512.hdl
book/projects/04/fill/: Fill.asm  Fill.hack
book/projects/04/mult/: Mult.asm
book/projects/05/: .Memory.hdl.swp  CPU.hdl  Computer.hdl  ComputerRect.out  Memory.hdl
book/tools/: HardwareSimulator.sh
source/Tecs/: Assembly.hs  Definitions.hs  Parsing.hs  SimpleSimulation.hs  Simulator.hs  Types.hs  Utility.hs
