name:                tecs
version:             0.1.0.0
author:              kyren
maintainer:          kerriganw@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      source
  build-depends:       base >= 4 && < 5, containers >= 0.5.5.1, parsec >= 3.1.5
  exposed-modules:     Tecs.Assembly, Tecs.Definitions, Tecs.Parsing
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-missing-signatures -fwarn-incomplete-patterns -fno-warn-name-shadowing

executable assembler
  hs-source-dirs:      assembler
  main-is:             Assembler.hs
  build-depends:       base >= 4 && < 5, tecs
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-missing-signatures -fwarn-incomplete-patterns -fno-warn-name-shadowing
